--- a/Next-steps.html
+++ b/Next-steps.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <script>
-            window.location = "https://github.com/pwa-builder/CloudAPK/blob/master/Next-steps.md";
+            window.location = "https://docs.pwabuilder.com/#/builder/android";
         </script>
     </body>
 </html>
